<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.robot.agent.MainActivity"
    tools:ignore="MergeRootFrame">

	<LinearLayout android:orientation="vertical"
		android:background="@color/gray" 
		android:layout_width="wrap_content"
		android:layout_height="fill_parent" 
		android:layout_weight="1">

		<Button
		    android:id="@+id/button_info"
		    android:layout_width="182dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="10.29"
		    android:text="@string/info" />

		<TableLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1">
			<TableRow android:layout_weight="1" android:padding="0dip">
				<ImageButton android:id="@+id/up" android:text="@string/up"
					android:layout_column="1" android:src="@drawable/upp" />
			</TableRow>
			<TableRow android:layout_weight="1" android:padding="0dip">
				<ImageButton android:id="@+id/left" android:text="@string/left"
					android:src="@drawable/left" />
				<ImageButton android:id="@+id/stop" android:text="@string/stop"
					android:src="@drawable/stop" />
				<ImageButton android:id="@+id/right" android:text="@string/right"
					android:src="@drawable/right" />
			</TableRow>
			<TableRow android:layout_weight="1" android:padding="0dip">
				<ImageButton android:id="@+id/down" android:text="@string/down"
					android:src="@drawable/down" android:layout_column="1" />
			</TableRow>
		</TableLayout>
	</LinearLayout>

	<TabHost android:id="@android:id/tabhost"
	    android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_weight="20">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">

			<TabWidget
			    android:id="@android:id/tabs"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" >
			</TabWidget>

			<FrameLayout
			    android:id="@android:id/tabcontent"
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent">

				<ScrollView android:id="@+id/tab1" android:layout_width="fill_parent"
					android:layout_height="fill_parent">
					<LinearLayout android:id="@+id/tab1_layout"
						android:orientation="vertical" android:layout_width="fill_parent"
						android:layout_height="fill_parent">
						<TextView android:id="@+id/display_windows"
							android:layout_width="fill_parent" android:layout_height="fill_parent"
							android:textColor="@color/green">
						</TextView>
					</LinearLayout>
				</ScrollView>
				
				<ImageView android:id="@+id/tab2" android:layout_width="fill_parent"
					android:layout_height="fill_parent">
				</ImageView>
				<!-- net.roboduino.agent.VideoView android:id="@+id/tab2" android:layout_width="fill_parent" android:layout_height="fill_parent" /-->
				<TextView android:id="@+id/tab3" android:layout_width="fill_parent"
					android:layout_height="fill_parent" android:transcriptMode="alwaysScroll"
					android:textColor="@color/green">
				</TextView>
			</FrameLayout>
		</LinearLayout>
	</TabHost>

</LinearLayout>

